# qt_nim_android

./: .gitignore  README.md
QTWraper/: main.nimble
QTWraper/src/: README.md  main.nim
QTWraperCSide/: CMakeLists.txt  QTWraperCSideQmake.pro  QTWraperCSide_global.h  README.md  glwidget.cpp  glwidget.h  helper.h  qtwrapercside.cpp  qtwrapercside.h  window.cpp
